testError: mark most string arguments for translation
* Makefile.maint (msg_gen_function): Add testError
* src/test.c (testDomainSave, testDomainRestore): Mark strings.
(testDomainCoreDump): Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Thu Mar 27 14:36:56 CET 2008 Jim Meyering <meyering@redhat.com>
 
+	testError: mark most string arguments for translation
+	* Makefile.maint (msg_gen_function): Add testError
+	* src/test.c (testDomainSave, testDomainRestore): Mark strings.
+	(testDomainCoreDump): Likewise.
+
 	openvzLog: mark its string arguments for translation
 	* Makefile.maint (msg_gen_function): Add openvzLog.
 	* src/openvz_conf.c (openvzAssignVMDef, openvzParseXML): Mark strings.
