Added patches for routed networking from Mads Chr. Olesen

--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ Patches have also been contributed by:
   Chris Lalancette     <clalance@redhat.com>
   Guido Guenther       <agx@sigxcpu.org>
   Daniel Hokka Zakrisson <daniel@hozac.com>
+  Mads Chr. Olesen     <shiyee@shiyee.dk>
 
   [....send patches to get your name here....]
 
