--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Apr  2 17:19:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	C99 initializer on __lastErr
+	* src/virterror.c: Use C99 initializers to make initialization
+	  of __lastErr clearer (Guido Günther).
+
 Tue Apr  1 15:00:03 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/lxc_conf.c: patch from Dave Leskovec fixing an freed memory
