Add Cole Robinson to AUTHORS, Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -41,6 +41,7 @@ Patches have also been contributed by:
   Guido Guenther       <agx@sigxcpu.org>
   Daniel Hokka Zakrisson <daniel@hozac.com>
   Mads Chr. Olesen     <shiyee@shiyee.dk>
+  Cole Robinson        <crobinso@redhat.com>
 
   [....send patches to get your name here....]
 
