--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr  7 14:36:56 CET 2008 Jim Meyering <meyering@redhat.com>
+
+	* tests/vcpupin: Add a test for the 2008-04-04 virsh.c bugfix.
+
 Mon Apr  7 12:53:01 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* docs/bugs.html docs/libvir.html: update the page bugzilla URIs
