--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr  8 10:19:01 CEST 2008 Daniel Veillard <daniel@veillard.com>
+
+	* python/generator.py: fix an infinite loop bug
+
 Mon Apr  7 14:36:56 CET 2008 Jim Meyering <meyering@redhat.com>
 
 	* tests/vcpupin: Add a test for the 2008-04-04 virsh.c bugfix.
