--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr  8 18:44:27 CEST 2008 Daniel Veillard <daniel@veillard.com>
+
+	* configure.in NEWS doc/* po/*: making libvirt-0.4.2 release
+
 Mon Apr  8 17:32:07 CET 2008 Jim Meyering <meyering@redhat.com>
 
 	* configure.in (ALL_LINGUAS): Fix typo: s/Latn/latin/.
