--- a/NEWS
+++ b/NEWS
@@ -24,7 +24,8 @@ Releases
       virHashRemoveSet bug (Hiroyuki Kaguchi), close-on-exec flag for
       qemud signal pipe (Daniel Berrange), double free in OpenVZ
       (Anton Protopopov), handle mac without addresses (Shigeki Sakamoto),
-      MAC addresses checks (Shigeki Sakamoto and Richard Jones)
+      MAC addresses checks (Shigeki Sakamoto and Richard Jones),
+      allow to read non-seekable files (Jim Meyering)
    - Improvements: Windows build (Richard Jones), KVM/QEmu shutdown
       (Guido Guenther), catch virExec output on debug (Mark McLoughlin),
       integration of iptables and lokkit (Mark McLoughlin), keymap
