--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Thu Apr 10 18:54:03 CEST 2008 Jim Meyering <meyering@redhat.com>
 
+	HACKING: New file: begin to describe contributor/coding guidelines
+
 	ensure that no C source file uses TABs for indentation
 	* Makefile.maint (sc_TAB_in_indentation): New rule.
 
