--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr 10 18:33:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	Remove unused uid field in virsh control structure.
+	* src/virsh.c: Remove unused uid field in virsh control structure.
+
 Thu Apr 10 18:54:03 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	HACKING: New file: begin to describe contributor/coding guidelines
